--- a/requirements.txt
+++ b/requirements.txt
@@ -57,16 +57,13 @@ Markdown==3.3.4
 MarkupSafe==2.1.1
 matplotlib-inline==0.1.2
 mistune==0.8.4
-mkl-fft==1.3.1
-mkl-random==1.2.2
-mkl-service==2.4.0
 multidict==5.1.0
 nbclient==0.5.13
 nbconvert==6.4.4
 nbformat==5.3.0
 nest-asyncio==1.5.5
 notebook==6.4.11
-numpy==1.21.5
+numpy
 oauthlib==3.1.0
 opt-einsum==3.3.0
 packaging==21.3
@@ -92,21 +89,18 @@ pyrsistent==0.18.0
 PySocks==1.7.1
 pytest==7.1.2
 python-dateutil==2.8.2
-pywin32==302
-pywinpty==2.0.2
 pyzmq==23.2.0
 requests==2.28.1
 requests-oauthlib==1.3.0
 rsa==4.7.2
-scipy==1.7.3
+scipy
 Send2Trash==1.8.0
 setuptools==61.2.0
 six==1.16.0
 soupsieve==2.3.1
 tensorboard==2.9.1
 tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.6.0
-tensorflow==2.9.1
+tensorflow
 tensorflow-estimator==2.9.0
 tensorflow-io-gcs-filesystem==0.26.0
 termcolor==1.1.0
